[package]
name = "daily_helper"
authors = ["Louis Latreille <louis_latreille@hotmail.com>"]
edition = "2018"
version = "0.1.0"
description = "A productivity helper for windows"
license = "MIT"
repository = "https://github.com/louislatreille/dailyHelper"

[dependencies]
winrt-notification = { git = "https://github.com/Akida31/winrt-notification.git", rev = "083f0d7d9837924c3201887ae2432943291e3b64" }
chrono = "0.4.19"
chrono-tz = "0.8.6"

[dependencies.windows]
version = "0.54"
features = [
    "Win32_UI_Shell"
]
